prevent tooltip text from overflowing background
Previously, if the replacement text was shorter than the original text,
this resulted in the text overflowing the black background. Now we use
word-wrap to avoid that ugly mess.

This does introduce a lesser issue in that the prices don't typically
break in appealing manners, but at least they're legible.

closes #2

--- a/app/css/inject.css
+++ b/app/css/inject.css
@@ -4,6 +4,7 @@
 
 .min-wage-replacement{
   position: relative !important;
+
 }
 
 .min-wage-replacement:hover{
@@ -30,10 +31,13 @@
   /* A little space */
   padding-top: 2px;
   padding-bottom: 2px;
-  padding-right: 0.5em;
+
+  /* Handle len(pseudo text) > len(this) */
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  font-size: 0.75em;
 
   /* Attempting to handle overflow issues... */
   z-index: 20;
   width: 100%;
-  max-width: 1000px;
 }
